# Process this file with autoconf to produce a configure script.

AC_INIT(src/ut.cpp)
AM_INIT_AUTOMAKE(quickfix, 1.9.4)
AM_CONFIG_HEADER(config.h)
AM_DISABLE_STATIC

# Checks for programs.
AC_PROG_CXX()
AC_PROG_CC()
# AC_PROG_RANLIB
AC_DISABLE_STATIC
AC_LIBTOOL_WIN32_DLL
AM_PROG_LIBTOOL
AM_PROG_LEX

########################################
# CALLSTACK
########################################
use_callstack=no
AC_ARG_ENABLE(callstack,
    [  --enable-callstack      display c++ call stack after crashing],
    [use_callstack=$enableval],
    use_callstack=no
)

if test $use_callstack = yes
then
    AC_DEFINE(ENABLE_CALLSTACK, 1, 
	Define if you want a C++ callstack to be displayed after crashing)
fi
########################################

########################################
# RUBY
########################################
RUBYDIR=[`ruby -e 'require "rbconfig"; print Config::CONFIG["archdir"], "\n"'`]
AC_SUBST(RUBYDIR)
########################################

########################################
# MYSQL
########################################
has_mysql=false
AC_ARG_WITH(mysql,
    [  --with-mysql=<path>     prefix of MySQL installation. e.g. /usr/local or /usr], 
    [has_mysql=true],
    has_mysql=false
)
MYSQL_PREFIX=$with_mysql
AC_SUBST(MYSQL_PREFIX)

if test $has_mysql = true
then
    MYSQL_CFLAGS="-I${MYSQL_PREFIX}/include/mysql"    
    AC_SUBST(MYSQL_CFLAGS)
    MYSQL_LIBS="-L${MYSQL_PREFIX}/lib/mysql -lmysqlclient"
    AC_SUBST(MYSQL_LIBS)
    AC_DEFINE(HAVE_MYSQL, 1, Define if you have sql library (-lmysqlclient))
fi
########################################

########################################
# PYTHON
########################################
has_python=false
AC_ARG_WITH(python,
    [  --with-python=<path>     directory containing python headers e.g. /usr/local/include/python2.3], 
    [has_python=true],
    has_python=false
)
PYTHON_PREFIX=$with_python
AC_SUBST(PYTHON_PREFIX)

if test $has_python = true
then
    PYTHON_CFLAGS="-I${PYTHON_PREFIX}" 
    AC_SUBST(PYTHON_CFLAGS)
    PYTHON_SITE_PACKAGES=[`python -c 'from distutils import sysconfig; print sysconfig.get_python_lib()'`]
    AC_SUBST(PYTHON_SITE_PACKAGES)
    AC_DEFINE(HAVE_PYTHON, 1, Define if you have python)
fi
AM_CONDITIONAL(HAVE_PYTHON, $has_python)
########################################

########################################
# JAVA
########################################
has_python=false
AC_ARG_WITH(java,
    [  --with-java     will use JAVA_HOME settings to find jni.h and javac],
    [has_java=true],
    has_java=false
)

if test $has_java = true
then
  jarlib=$libdir
  jni_mt=$build_os
  case $build_os in
    linux-*) jni_mt=linux;;
    solaris*.*) jni_mt=solaris;;
    darwin*) jarlib=/Library/Java/Extensions;;
  esac

  AC_SUBST(jarlib)
  JAVA_CFLAGS="-I$JAVA_HOME/include -I$JAVA_HOME/include/$jni_mt"
  AC_SUBST(JAVA_CFLAGS)
  AC_DEFINE(HAVE_JAVA, 1, Define if you have java)
fi
AM_CONDITIONAL(HAVE_JAVA, $has_java)
########################################

########################################
# STLport
########################################
has_stlport=false
AC_ARG_WITH(stlport,
    [  --with-stlport=<path>   prefix of stlport installation. e.g. /usr/local or /usr], 
    [has_stlport=true],
    has_stlport=false
)
STLPORT_PREFIX=$with_stlport
AC_SUBST(STLPORT_PREFIX)

if test $has_stlport = true
then
    STLPORT_CFLAGS="-I${STLPORT_PREFIX}/include/stlport"
    AC_SUBST(STLPORT_CFLAGS)
    STLPORT_LIBS="-L${STLPORT_PREFIX}/lib -lstlport_gcc"
    AC_SUBST(STLPORT_LIBS)
    AC_DEFINE(HAVE_STLPORT, 1, Define if you have stlport library (-lstlport_gcc))
fi
########################################

########################################
# LIBXML
########################################
AM_PATH_XML2(2.0.0, , AC_MSG_ERROR(libxml2 must be installed.))
########################################

# libs
LIBS="$LIBS $STLPORT_LIBS $XML_LIBS $MYSQL_LIBS"
# gcc flags
SHAREDFLAGS="$STLPORT_CFLAGS $MYSQL_CFLAGS $XML_CPPFLAGS $XML_CFLAGS $JAVA_CFLAGS $PYTHON_CFLAGS"
CFLAGS="$CFLAGS $SHAREDFLAGS"
AC_SUBST(CFLAGS)
CXXFLAGS="$CXXFLAGS $SHAREDFLAGS"
AC_SUBST(CXXFLAGS)

# Checks for libraries.
AC_CHECK_LIB(c,shutdown,true,AC_CHECK_LIB(socket,shutdown))
AC_CHECK_LIB(c,inet_addr,true,AC_CHECK_LIB(nsl,inet_addr))
AC_CHECK_LIB(c,nanosleep,true,AC_CHECK_LIB(rt,nanosleep))
AC_CHECK_LIB(compat,ftime)

AC_MSG_CHECKING([which threading environment to use])
# each host OS needs special threading flags
case $build_os in
	freebsd2*|freebsd3*|freebsd4*)
		LIBS="-pthread $LIBS"
		AC_MSG_RESULT([-pthread])
		;;
	freebsdelf4*)
		LIBS="-pthread $LIBS"
		AC_MSG_RESULT([-pthread])
		;;
	linux-*) 
		AC_MSG_RESULT([-lpthread])
		AC_CHECK_LIB(pthread, pthread_create)
		;;
	solaris*) 
		AC_MSG_RESULT([-lpthread])
		AC_CHECK_LIB(pthread, pthread_create)
		;;
	*)
		# maybe we have a usable libc for other OSes
		AC_MSG_RESULT([-lc_r])
		AC_CHECK_LIB(c_r, pthread_create)
		;;
esac

# Checks for header files.
AC_CHECK_HEADERS(stdio.h)

# Checks for typedefs, structures, and compiler characteristics.
# AC_CHECK_BROKENSOEXCEPT

AC_LANG_SAVE
AC_LANG_CPLUSPLUS

AC_MSG_CHECKING(for STREAMS ioctl)
AC_TRY_COMPILE(
	[#include <sys/types.h>
	 #include <stropts.h>
	 #include <sys/conf.h>],
	[ioctl(1,I_NREAD);],
	AC_MSG_RESULT(yes)
	AC_DEFINE(USING_STREAMS, 1,
	The system supports AT&T STREAMS, presumably standard),
	AC_MSG_RESULT(no))

AC_MSG_CHECKING(for socklen_t)
AC_TRY_COMPILE(
	[#include <unistd.h>
         #include <sys/types.h>
         #include <sys/socket.h>],
	[socklen_t t = 1;],
	AC_MSG_RESULT(yes),
	AC_MSG_RESULT(no)
	AC_DEFINE(socklen_t, int,
	socklen_t needs to be defined if the system doesn't define it))

#AC_MSG_CHECKING(for recursive mutexes)
#AC_TRY_COMPILE(
#	 [#include <pthread.h>],
#	 [PTHREAD_MUTEX_RECURSIVE;],
#	 AC_MSG_RESULT(yes),
#	 AC_MSG_RESULT(no)
#	 AC_MSG_ERROR(recursive mutexes are required))

AC_MSG_CHECKING(for ftime)
AC_TRY_COMPILE(
	[#include <sys/timeb.h>],
	[timeb tb;
         ftime(&tb)],
	has_ftime=true, has_ftime=false)

if test $has_ftime = true
then AC_MSG_RESULT(yes)
     AC_DEFINE(HAVE_FTIME, 1, found ftime)
else AC_MSG_RESULT(no)
fi
AM_CONDITIONAL(HAVE_FTIME, $has_ftime)

AC_MSG_CHECKING(for set_terminate in the global namespace)
AC_TRY_COMPILE(
	[#include <exception>
	 void term() {}],
	[set_terminate(term);],
         set_terminate_is_global=true, set_terminate_is_global=false)

if test $set_terminate_is_global = true
then AC_MSG_RESULT(yes)
else AC_MSG_RESULT(no)
    AC_MSG_CHECKING(for set_terminate in the std namespace)
    AC_TRY_COMPILE(
    [#include <exception>
     void term() {}],
    [std::set_terminate(term);],
    AC_MSG_RESULT(yes)
    AC_DEFINE(TERMINATE_IN_STD, 1, 
    For location of set_terminate),
    AC_MSG_RESULT(no)
    AC_MSG_ERROR(unable to find set_terminate in std or global namespace))
fi

AC_MSG_CHECKING(for typeinfo in the global namespace)
AC_TRY_COMPILE(
	[#include <typeinfo>],
	[const typeinfo& ty = typeid(typeinfo);],
	typeinfo_is_global=true, typeinfo_is_global=false)

if test $typeinfo_is_global = true
then AC_MSG_RESULT(yes)
else AC_MSG_RESULT(no)
    AC_MSG_CHECKING(for typeinfo in the std namespace)
    AC_TRY_COMPILE(
    [#include <typeinfo>],
    [const std::type_info& ty = typeid(std::type_info);],
    AC_MSG_RESULT(yes)
    AC_DEFINE(TYPEINFO_IN_STD, 1, 
    Whether or not we are using the new-style typeinfo header),
    AC_MSG_RESULT(no)
    AC_MSG_ERROR(type_info is required by the test library))
fi

# check for gethostbyname_r
AC_MSG_CHECKING(for gethostbyname_r with input result)
AC_TRY_COMPILE(
	[#include <netdb.h>],
	[const char* name = "localhost";
         hostent host;
         char buf[1024];
         hostent* host_ptr;
         int error;
         gethostbyname_r( name, &host, buf, sizeof(buf), &host_ptr, &error );
	 return 0;],
	 AC_MSG_RESULT(yes)
	 AC_DEFINE(GETHOSTBYNAME_R_INPUTS_RESULT, 1,
	 The system has gethostbyname_r which takes a result as a pass-in param),
	 AC_MSG_RESULT(no))

# check for gethostbyname_r
AC_MSG_CHECKING(for gethostbyname_r with return result)
AC_TRY_COMPILE(
	[#include <netdb.h>],
	[const char* name = "localhost";
         hostent host;
         char buf[1024];
         hostent* host_ptr;
         int error;
         host_ptr = gethostbyname_r( name, &host, buf, sizeof(buf),  &error );
	 return 0;],
	 AC_MSG_RESULT(yes)
	 AC_DEFINE(GETHOSTBYNAME_R_RETURNS_RESULT, 1,
	 The system has gethostbyname_r which returns result),
	 AC_MSG_RESULT(no))

AC_DEFINE(_REENTRANT, 1, enable reentrant system calls)

# Checks for library functions.
AC_LANG_RESTORE

AC_CHECK_LIB(iberty, cplus_demangle,    
  AC_DEFINE(HAVE_CPLUS_DEMANGLE,1,whether or not we have to demangle names)
  LIBS="$LIBS -liberty")

# Checks for runtime behavior
AC_MSG_CHECKING(if select modifies timeval parameter)
AC_TRY_RUN(
[
#include <unistd.h>
#include <sys/types.h>
#include <sys/time.h>
int main(int argc, char** argv)
{
  struct timeval tv;
  tv.tv_sec = 0;
  tv.tv_usec = 1;
  select(0,0,0,0,&tv);
  return tv.tv_usec != 1 ? 0 : 1;
}
],
AC_MSG_RESULT(yes)
AC_DEFINE(SELECT_MODIFIES_TIMEVAL, 1, 
select statement decrements timeval parameter if interupted),
AC_MSG_RESULT(no),
AC_MSG_RESULT(unable to determine, assuming no...))

AC_OUTPUT( 
	quickfix.pc
	Makefile
	src/Makefile
	src/C++/Makefile
	src/C++/test/Makefile
	src/java/Makefile
	src/java/cfg/Makefile
	src/java/src/Makefile
	src/java/src/quickfix/Makefile
	src/java/src/quickfix/field/Makefile
	src/java/src/quickfix/fix40/Makefile
	src/java/src/quickfix/fix41/Makefile
	src/java/src/quickfix/fix42/Makefile
	src/java/src/quickfix/fix43/Makefile
	src/java/src/quickfix/fix44/Makefile
	src/python/Makefile
	cfg/Makefile
	bin/Makefile
	bin/cfg/Makefile
	spec/Makefile
	test/Makefile
	test/atrun/Makefile
	test/cfg/Makefile
	test/definitions/Makefile
	test/definitions/server/Makefile
	test/definitions/server/future/Makefile
	examples/Makefile
	examples/executor/Makefile
	examples/executor/C++/Makefile
	examples/executor/java/Makefile
	examples/executor/java/src/Makefile
	examples/ordermatch/Makefile
	examples/ordermatch/test/Makefile
	examples/tradeclient/Makefile
	examples/tradeclientgui/Makefile
	examples/tradeclientgui/banzai/Makefile
	examples/tradeclientgui/banzai/test/Makefile
	examples/tradeclientgui/banzai/src/Makefile
	examples/tradeclientgui/banzai/src/quickfix/Makefile
	examples/tradeclientgui/banzai/src/quickfix/banzai/Makefile
	examples/tradeclientgui/banzai/src/quickfix/banzai/ui/Makefile
	doc/Makefile
	doc/html/Makefile
	templates/Makefile
        CPPTest/Makefile)
